--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,12 @@
 [workspace]
-members = ["parser", "parser/visitable-derive", "parser/generator", "checker"]
+members = [
+    "parser",
+    "parser/visitable-derive",
+    "parser/generator",
+    "checker",
+    "checker/binary-serialize-derive",
+    # "checker/specification",
+]
 
 [package]
 name = "ezno"
@@ -27,9 +34,10 @@ name = "ezno"
 path = "src/main.rs"
 
 [dependencies]
+checker = { path = "./checker", version = "0.0.4", package = "ezno-checker", features = [
+    "ezno-parser",
+] }
 # parser = { path = "./parser", version = "0.0.3", package = "ezno-parser" }
-checker = { path = "./checker", version = "0.0.4", package = "ezno-checker" }
-# , features = ["ezno-parser"] }
 # ezno-web-framework = { path = "./plugins/web" }
 
 console = "0.14.1"
@@ -39,8 +47,7 @@ base64 = "0.13.0"
 enum-variants-strings = "0.2.2"
 
 [dependencies.parser]
-git = "https://github.com/kaleidawave/ezno.git"
-branch = "parser-fixes2"
+path = "./parser"
 version = "0.0.3"
 features = ["extras"]
 package = "ezno-parser"
