--- a/checker/specification/Cargo.toml
+++ b/checker/specification/Cargo.toml
@@ -6,6 +6,10 @@ publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+# Prevent this from interfering with workspaces
+[workspace]
+members = ["."]
+
 [[test]]
 name = "specification_test"
 path = "test.rs"
