Fix sponsors part of the action

--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -63,6 +63,8 @@ jobs:
           echo $SPONSORS
           export SPONSORS
         shell: bash
+        env:
+          GH_TOKEN: ${{ github.token }}
 
       - name: Check repo
         if: true
