Tokens use start positions rather than Spans
- AST no longer has source id (new change incoming to support bundling)
- Use GetFieldByType derive macro occassionally
- Every ASTNode has a fixed position that is NO LONGER CALCULATED

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ members = [
     "parser/generator",
     "checker",
     "checker/binary-serialize-derive",
+    "lsp/server",
+    "checker/specification"
 ]
 
 [package]
