--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ members = [
     "parser/generator",
     "checker",
     "checker/binary-serialize-derive",
-    "lsp/server",
-    "checker/specification"
+    # "lsp/server",
+    # "checker/specification"
 ]
 
 [package]
@@ -46,6 +46,8 @@ codespan-reporting = "0.11.1"
 argh = "0.1.6"
 base64 = "0.13.0"
 enum-variants-strings = "0.2.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.107"
 
 [dependencies.parser]
 path = "./parser"
@@ -55,7 +57,6 @@ package = "ezno-parser"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 wasm-bindgen = "=0.2.87"
-serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.5.0"
 js-sys = "0.3"
 
