--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -13,15 +13,21 @@ categories = ["parser-implementations"]
 
 [features]
 # TODO these shouldn't be default
-default = ["self-rust-tokenize", "extras", "codespan-reporting"]
+default = [
+  "self-rust-tokenize",
+  "extras",
+  "codespan-reporting",
+  "serde-serialize",
+]
 self-rust-tokenize = ["dep:self-rust-tokenize", "source-map/self-rust-tokenize"]
 codespan-reporting = ["source-map/codespan-reporting"]
+serde-serialize = ["dep:serde"]
 extras = []
 
 [dependencies]
 visitable-derive = { path = "./visitable-derive", version = "0.0.2", package = "ezno-parser-visitable-derive" }
 
-derive-finite-automaton = "0.1.0"
+derive-finite-automaton = "0.1.1"
 derive-debug-extras = { version = "0.2.2", features = [
   "auto-debug-single-tuple-inline",
 ] }
@@ -40,6 +46,7 @@ source-map = { version = "0.14.1", features = [
   "serde-serialize",
   "self-rust-tokenize",
 ] }
+serde = { version = "1.0", features = ["derive"], optional = true }
 self-rust-tokenize = { version = "0.3.3", optional = true }
 
 # Needs buffered and not parralel for WASM
@@ -56,5 +63,5 @@ tokenizer-lib = { version = "1.5.1", features = [
 ], default_features = false }
 
 [dev-dependencies]
-match_deref = "0.1.1"
 pretty_assertions = "1.3.0"
+match_deref = "0.1.1"
