--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -105,10 +105,12 @@ jobs:
         if: steps.changes.outputs.parser == 'true'
         run: |
           cargo test
-
+          
           # TODO test other big libraries
           curl https://esm.sh/v128/react-dom@18.2.0/es2022/react-dom.mjs > react.js
-          cargo run -p ezno-parser --example parse react.js
+          cargo run -p ezno-parser --example parse react.js > /dev/null
+
+          cargo test -p ezno-ast-generator
         working-directory: parser
 
       - name: Run checker specification
