Renamed some things and other small fixes

--- a/src/js-cli-and-library/package.json
+++ b/src/js-cli-and-library/package.json
@@ -69,7 +69,10 @@
 		],
 		"rollup": {
 			"emitCJS": true,
-			"commonjs": true
+			"commonjs": true,
+			"esbuild": {
+				"target": "esnext"
+			}
 		}
 	},
 	"devDependencies": {
