--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,9 +35,6 @@ name = "ezno"
 path = "src/main.rs"
 
 [dependencies]
-checker = { path = "./checker", version = "0.0.8", package = "ezno-checker", features = [
-    "ezno-parser",
-] }
 # ezno-web-framework = { path = "./plugins/web" }
 
 console = "0.14.1"
@@ -47,6 +44,12 @@ base64 = "0.13.0"
 enum-variants-strings = "0.2.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.107"
+
+[dependencies.checker]
+path = "./checker"
+version = "0.0.8"
+features = ["ezno-parser"]
+package = "ezno-checker"
 
 [dependencies.parser]
 path = "./parser"
