--- a/src/js-cli-and-library/package.json
+++ b/src/js-cli-and-library/package.json
@@ -27,7 +27,7 @@
 		"bind-release": "wasm-bindgen --out-dir build --target web ../../target/wasm32-unknown-unknown/release/ezno_lib.wasm",
 		"build-js": "unbuild && cp ./build/ezno_lib_bg.wasm dist/shared && cp src/cli_node.cjs dist/cli.cjs",
 		"test": "npm run build && npm run run-tests",
-		"run-tests": "node test.mjs && node test.cjs && deno run -A test.mjs"
+		"run-tests": "node test.mjs && deno run -A test.mjs"
 	},
 	"keywords": [
 		"typescript",
