--- a/src/js-cli-and-library/package.json
+++ b/src/js-cli-and-library/package.json
@@ -4,31 +4,30 @@
 	"description": "A JavaScript compiler and TypeScript checker written in Rust with a focus on static analysis and runtime performance",
 	"license": "MIT",
 	"repository": "https://github.com/kaleidawave/ezno",
-	"main": "./dist/index.cjs",
+	"main": "./dist/index.mjs",
 	"module": "./dist/index.mjs",
 	"types": "./build/ezno.d.ts",
 	"type": "module",
 	"exports": {
 		".": {
-			"require": "./dist/index.cjs",
-			"import": "./dist/index.mjs",
-			"types": "./ezno.d.ts"
+			"import": "./dist/index.mjs"
 		},
 		"./initialized": {
-			"require": "./dist/initialized.cjs",
 			"import": "./dist/initialized.mjs"
+		},
+		"./node": {
+			"import": "./dist/remote.mjs"
 		}
 	},
 	"scripts": {
 		"clean": "rmdir dist && rmdir build",
-		"check": "cargo check --lib --target wasm32-unknown-unknown",
 		"build": "cargo build --lib --target wasm32-unknown-unknown && npm run bind && npm run build-js",
 		"build-release": "cargo build --lib --release --target wasm32-unknown-unknown && npm run bind-release && npm run build-js",
 		"bind": "wasm-bindgen --out-dir build --target web ../../target/wasm32-unknown-unknown/debug/ezno_lib.wasm",
 		"bind-release": "wasm-bindgen --out-dir build --target web ../../target/wasm32-unknown-unknown/release/ezno_lib.wasm",
-		"build-js": "unbuild && cp ./build/ezno_lib_bg.wasm dist/shared",
+		"build-js": "unbuild && cp ./build/ezno_lib_bg.wasm dist/shared && cp src/cli_node.cjs dist/cli.cjs",
 		"test": "npm run build && npm run run-tests",
-		"run-tests": "node test.mjs && node test.cjs && deno run -A test.mjs"
+		"run-tests": "node test.mjs && deno run -A test.mjs"
 	},
 	"keywords": [
 		"typescript",
@@ -40,7 +39,7 @@
 		"dist"
 	],
 	"bin": {
-		"ezno": "./dist/cli.cjs"
+		"ezno": "./dist/cli.mjs"
 	},
 	"author": {
 		"name": "Ben",
@@ -68,8 +67,10 @@
 			}
 		],
 		"rollup": {
-			"emitCJS": true,
-			"commonjs": true
+			"commonjs": true,
+			"esbuild": {
+				"target": "esnext"
+			}
 		}
 	},
 	"devDependencies": {
